@@ -1,12 +1,12 @@
 apply plugin: "base"
 
-version = System.getProperty("grails.version") ?: "2.4.2"
+version = project.getProperty("grails.version")
 
 archivesBaseName = "grails-docs"
 
 ext.checkOutDir = "${buildDir.path}/checkout"
 ext.outputDir = "${buildDir.path}/docs"
-ext.githubBranch = "2.4.x"
+ext.githubBranch = "3.0.x"
 
 ext.explicitGrailsHome = System.getProperty("grails.home")
 ext.grailsHome = explicitGrailsHome ? file(explicitGrailsHome).absolutePath : "$checkOutDir/grails-src"
@@ -22,9 +22,13 @@ buildscript {
     }
 
     dependencies {
-        classpath "org.grails:grails-docs:2.4.2"
-        classpath 'org.codehaus.groovy:groovy-all:2.3.0'
+        classpath "org.grails:grails-docs:3.0.0"
+        classpath 'org.codehaus.groovy:groovy-all:2.4.0'
     }
+}
+
+task buildscriptDependencies(type: DependencyReportTask) {
+    configurations = [buildscript.configurations.classpath]
 }
 
 // use jsoup in PdfBuilder for cleaning input html
@@ -38,7 +42,7 @@ task fetchGrailsSource << {
     println "Downloading Grails source code. If you already have a copy " +
             "of the Grails source code checked out you can avoid this download " +
             "by setting the grails.home system property to point to your local " +
-            "copy of the source. See README.txt for more information."
+            "copy of the source. See README.md for more information."
 
     def zipFile = "${checkOutDir}/grails-src.zip"
     ant.get src: "http://github.com/grails/grails-core/zipball/${githubBranch}", dest: zipFile, verbose: true
@@ -47,15 +51,17 @@ task fetchGrailsSource << {
         mapper type: "regexp", from: "(grails-grails-core-\\S*?/)(.*)", to: "grails-src/\\2"
     }
 
+    ant.chmod(file:"${checkOutDir}/grails-src/gradlew", perm:700)
+
     println "Grails source code has been downloaded to ${relativePath(grailsHome)}"
 }
 
 fetchGrailsSource.onlyIf { !explicitGrailsHome }
 
-task apiDocs(type: GradleBuild, dependsOn: 'fetchGrailsSource') {
-    tasks = ["groovydoc"]
-    buildFile = "${project.grailsHome}/build.gradle"
-    startParameter.excludedTaskNames = ['compileGroovy', 'compileUaaGroovy', 'compileJsp21Groovy', 'compileAstGroovy', 'jar']
+task apiDocs(type: Exec, dependsOn: 'fetchGrailsSource') {
+    commandLine = ["./gradlew", "groovydoc", '--info', '--stacktrace']
+    workingDir = "${checkOutDir}/grails-src"
+    environment "GRADLE_OPTS", "-Xmx2048m -Xms256m -XX:MaxPermSize=512m -XX:+CMSClassUnloadingEnabled -XX:+HeapDumpOnOutOfMemoryError"
 }
 
 apiDocs.onlyIf { !System.getProperty("disable.groovydocs") }
@@ -78,7 +84,7 @@ task publishGuide(type: grails.doc.gradle.PublishGuide, dependsOn: ['apiDocs', '
     // generated with a 'en' in the path, but the source is in 'en'
     // so that it's easy to track with git.
     sourceDir = new File(projectDir, "src/en")
-    propertiesFiles = [ new File(project.grailsHome, "build.properties") ]
+    propertiesFiles = [ new File(projectDir, "gradle.properties") ]
     macros = [ new grails.doc.macros.GspTagSourceMacro(searchDirs) ]
 }
 
